--- a/Day 16/bob.html
+++ b/Day 16/bob.html
@@ -7,7 +7,7 @@
     <title>Ask the Bob</title>
 </head>
 <body>
-    <h1>Ask the Bob Instructions</h1>
+    <h1>Ask the Bob</h1>
     <script src="bob.js"></script>
 </body>
 </html>
